2010-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-12-08  Jakub Jelinek  <jakub@redhat.com>
	PR c/35443
	* c-pretty-print.c (pp_c_expression): Handle BIND_EXPR.

	2009-01-09  Jakub Jelinek  <jakub@redhat.com>

	PR c/35742
	* c-pretty-print.c (pp_c_expression): Handle GOTO_EXPR like
	BIND_EXPR.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/43438
	* combine.c (make_extraction): Properly zero-/sign-extend an
	extraction of the low part of a CONST_INT.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43629
	* tree-ssa-ccp.c (likely_value): Scan for literal constants
	as well.  Reset all_undefined_operands if we have seen a
	constant value.

2010-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/43769
	* tree-sra.c (bitfield_overlaps_p): If the length of the element is
	self-referential, try to compute an upper bound.

2010-04-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2009-12-05  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR ada/41912
	* pa/linux-unwind.h (pa32_fallback_frame_state): Set fs->signal_frame
	for signal frames.
	* pa/hpux-unwind.h (pa32_fallback_frame_state): Likewise.

2010-03-31  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2010-03-27  Uros Bizjak  <ubizjak@gmail.com>

	PR tree-optimization/43528
	* stor-layout.c (place_field): Check that constant fits into
	unsigned HWI when skipping calculation of MS bitfield layout.

	2010-03-26  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43524
	* config/i386/i386.c (ix86_expand_prologue) [TARGET_STACK_PROBE]:
	Remove invalid assert and wrong comment.

2010-03-30  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (s390_emit_prologue): Omit issuing a dynamic
	stack check if the mask would be zero.

2010-03-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42113
	* config/alpha/alpha.md (*cmp_sadd_si): Change mode